src/css/topGames.css
/* Основні стилі для категорій */
.game-category {
    margin-bottom: 40px;
    margin-right: 40px;
    padding: 10px;
    background-color: #2c2f36;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    max-width: 100%;
}

.category-title {
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    margin-bottom: 20px;
    text-align: center;
}

.mask {
    display: flex;
    justify-content: center;
    align-items: center;
}

.loader {
    border: 4px solid rgba(255, 255, 255, 0.3);
    border-top: 4px solid #fff;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.games-category-list {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
    /* Тепер 5 карток в одному ряді */
    gap: 20px;
    list-style: none;
    padding: 0;
    width: 100%;
    margin-right: 40px;
    /* Великий відступ від правої стінки */
}

.see-more {
    background-color: rgb(190, 199, 194);
    color: black;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    margin-top: 20px;
    display: block;
    text-align: center;
    transition: background-color 0.3s, color 0.3s;
}

.see-more:hover {
    background-color: #93ABAE;
    color: rgb(246, 245, 239);
}

/* Стилі для кожної ігрової картки */
.game-category-card {
    background-color: #1f2228;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease;
    height: 100%;
}

.game-category-card:hover {
    transform: translateY(-5px);
}

.overlay-div {
    position: relative;
    overflow: hidden;
    height: 180px;
    /* Збільшена висота для більш збалансованого вигляду */
}

.gameByCategory-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.overlay-div:hover .gameByCategory-img {
    transform: scale(1.1);
}

.overlay-txt {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    color: #e6e6e6;
    /* Світліший колір для quick view */
    text-align: center;
    padding: 10px;
    font-size: 16px;
    opacity: 0;
    transition: opacity 0.3s ease;
}

.overlay-div:hover .overlay-txt {
    opacity: 1;
}

.game-category-details {
    padding: 10px;
    text-align: center;
}

.game-category-title {
    font-size: 16px;
    color: #fff;
    margin-bottom: 8px;
}

.game-category-author {
    font-size: 14px;
    color: #9e9e9e;
}

.topGamesTitle {
    color: #F6F5EF;
    margin-bottom: 10px;
}

.titleSpan {
    color: var(--alternative-gray);
}

@media screen and (max-width: 768px) {
    .game-category {
        margin: 0 40px 40px;
    }
    .topGamesTitle {
        margin-left: 40px;
    }
}

